# src/routes/index.ts
@@ -9,6 +9,7 @@ import adminEnrollmentRoutes from "./admin/enrollment.routes.js";
 import adminPaymentRoutes from "./admin/payment.routes.js";
 import adminCourseNestedRoutes from "./admin/course.nested.routes.js";
 import studentAuthRoutes from "./auth/student.auth.routes.js";
+import studentEnrollmentRoutes from "./student/enrollment.routes.js";
 
 import publicCategoryRoutes from "./public/category.routes.js";
 import publicCourseRoutes from "./public/course.routes.js";
@@ -33,6 +34,7 @@ router.use("/admin/payments", adminPaymentRoutes);
 
 // ─── Student Portal ───────────────────────────────────────────────────────────
 router.use("/student/auth", studentAuthRoutes);
+router.use("/student/enrollments", studentEnrollmentRoutes);
 
 // ─── Public Portal ────────────────────────────────────────────────────────────
 router.use("/public/categories", publicCategoryRoutes);
